<resources>
  <string name="app_name">MyAppPortfolio</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="btn_spotify_app_text">SPOTIFY STREAMER</string>
  <string name="btn_scores_app_text">SCORES APP</string>
  <string name="btn_library_app_text">LIBRARY APP</string>
  <string name="btn_build_it_bigger_app_text">BUILD IT BIGGER</string>
  <string name="btn_beacon_app_text">BEACON READER</string>
  <string name="btn_own_app_text">CAPSTONE: MY OWN APP</string>
  <string name="portfolio_title_text">My Nanodegree Apps!</string>

  <string name="toast_template_format">This button will launch %s</string>
</resources>
