<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/default_background"
    tools:context=".PortfolioActivity">

  <TextView
      android:text="@string/portfolio_title_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:textSize="16sp"
      android:gravity="center_horizontal"/>
  <Button
      android:id="@+id/btn_spotify"
      android:layout_height="wrap_content"
      android:text="@string/btn_spotify_app_text"
      style="@style/PortfolioButton" />
  <Button
      android:id="@+id/btn_scores"
      android:layout_height="wrap_content"
      android:text="@string/btn_scores_app_text"
      style="@style/PortfolioButton"/>
  <Button
      android:id="@+id/btn_library"
      android:layout_height="wrap_content"
      android:text="@string/btn_library_app_text"
      style="@style/PortfolioButton"/>
  <Button
      android:id="@+id/btn_bigger"
      android:layout_height="wrap_content"
      android:text="@string/btn_build_it_bigger_app_text"
      style="@style/PortfolioButton"/>
  <Button
      android:id="@+id/btn_beacon"
      android:layout_height="wrap_content"
      android:text="@string/btn_beacon_app_text"
      style="@style/PortfolioButton"/>
  <Button
      android:id="@+id/btn_own"
      android:layout_height="wrap_content"
      android:text="@string/btn_own_app_text"
      android:background="@drawable/btn_own_selector"
      style="@style/PortfolioButton"/>

</LinearLayout>
